...
      ),
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Image.asset('images/serkit board.jpeg'), // Display the image
            buildButton("Customer", CustomerLoginScreen(), Key('customerButton')),
            buildButton("Technician", LoginScreen(), Key("technicianButton")),
            buildButton("Admin", DeleteData(), Key("adminButton")),
          ],
        ),
      ),
    );
  }

...
